--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,1 +1,2 @@
-/* здесь подключите шрифты */
+@include font-face($font-family-primary, normal, 400, url("../../fonts/oswald/oswaldregular.woff2") format("woff2"));
+@include font-face($font-family-secondary, normal, 400, url("../../fonts/oswald/oswaldregular.woff2") format("woff2"));
