--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -1,5 +1,16 @@
 .page {
+  height: 100%;
+
+  &__title {
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 400;
+  }
+
   &__body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
     margin: 0;
 
     font-family: $font-family-primary;
