--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -6,6 +6,7 @@
 
 /* BLOCKS */
 @import "./blocks/page.scss";
+@import "./blocks/main.scss";
 @import "./blocks/wrapper.scss";
 @import "./blocks/container.scss";
 @import "./blocks/button.scss";
