--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,2 +1,2 @@
-@include font-face($font-family-primary, normal, 400, url("../../fonts/oswald/oswaldregular.woff2") format("woff2"));
-@include font-face($font-family-secondary, normal, 400, url("../../fonts/lato/Lato-Regular.woff2") format("woff2"));
+@include font-face("Oswald", normal, 400, url("../../fonts/oswald/oswaldregular.woff2") format("woff2"));
+@include font-face( "Lato", normal, 400, url("../../fonts/lato/Lato-Regular.woff2") format("woff2"));
