--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,6 +1,6 @@
 /* Fonts variables */
-$font-family-primary: "Oswald", sans-serif;
-$font-family-secondary: "Lato", sans-serif;
+$font-family-primary: "Oswald", "Arial", sans-serif;
+$font-family-secondary: "Lato", "Arial", sans-serif;
 
 /* Colors variables */
 /* Palette */
