--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,15 +1,13 @@
-.contacts {
-  &__title {
-    font-size: 16px;
-    line-height: 20px;
-    color: $text-color-dark-special-1;
-  }
+.contacts__title {
+  font-size: 16px;
+  line-height: 20px;
+  color: $text-color-dark-special-1;
+}
 
-  &__address {
-    font-family: $font-family-secondary;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 20px;
-    color: $text-color-dark-secondary;
-  }
+.contacts__address {
+  font-family: $font-family-secondary;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: $text-color-dark-secondary;
 }
