--- a/source/styles/blocks/copyright.scss
+++ b/source/styles/blocks/copyright.scss
@@ -1,9 +1,7 @@
-.copyright {
-  &__link {
-    @include reset-link;
+.copyright__link {
+  @include reset-link;
 
-    font-size: 16px;
-    line-height: 20px;
-    color: $text-color-dark-secondary;
-  }
+  font-size: 16px;
+  line-height: 20px;
+  color: $text-color-dark-secondary;
 }
