--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,25 +1,23 @@
-.example {
-  &__title {
-    font-size: 36px;
-    line-height: 40px;
-  }
+.example__title {
+  font-size: 36px;
+  line-height: 40px;
+}
 
-  &__text {
-    font-family: $font-family-secondary;
-    font-size: 14px;
-    line-height: 18px;
-    color: $text-color-dark-secondary;
-  }
+.example__text {
+  font-family: $font-family-secondary;
+  font-size: 14px;
+  line-height: 18px;
+  color: $text-color-dark-secondary;
+}
 
-  &__property {
-    font-family: $font-family-secondary;
-    font-size: 12px;
-    line-height: 12px;
-    color: $text-color-dark-secondary;
-  }
+.example__property {
+  font-family: $font-family-secondary;
+  font-size: 12px;
+  line-height: 12px;
+  color: $text-color-dark-secondary;
+}
 
-  &__value {
-    font-size: 24px;
-    line-height: 24px;
-  }
+.example__value {
+  font-size: 24px;
+  line-height: 24px;
 }
