--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -1,47 +1,45 @@
-.form {
-  &__text {
-    font-size: 14px;
-    line-height: 18px;
-  }
+.form__text {
+  font-size: 14px;
+  line-height: 18px;
+}
 
-  &__legend {
-    font-size: 24px;
-    line-height: 26px;
-  }
+.form__legend {
+  font-size: 24px;
+  line-height: 26px;
+}
 
-  &__label {
-    font-size: 16px;
-    line-height: 18px;
-    text-transform: uppercase;
+.form__label {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: $text-color-dark-secondary;
+}
+
+.form__input {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: $text-color-dark-secondary;
+
+  &::placeholder {
     color: $text-color-dark-secondary;
   }
+}
 
-  &__input {
-    font-size: 16px;
-    line-height: 18px;
-    text-transform: uppercase;
+.form__comment {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: $text-color-dark-secondary;
+
+  &::placeholder {
     color: $text-color-dark-secondary;
-
-    &::placeholder {
-      color: $text-color-dark-secondary;
-    }
   }
+}
 
-  &__comment {
-    font-size: 16px;
-    line-height: 18px;
-    text-transform: uppercase;
-    color: $text-color-dark-secondary;
-
-    &::placeholder {
-      color: $text-color-dark-secondary;
-    }
-  }
-
-  &__note {
-    font-family: $font-family-secondary;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-  }
+.form__note {
+  font-family: $font-family-secondary;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
 }
