--- a/source/styles/blocks/main-card.scss
+++ b/source/styles/blocks/main-card.scss
@@ -1,34 +1,32 @@
-.main-card {
-  &__title-link {
-    @include reset-link;
-  }
+.main-card__title-link {
+  @include reset-link;
+}
 
-  &__title {
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: $text-color-dark-special-1;
-  }
+.main-card__title {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: $text-color-dark-special-1;
+}
 
-  &__text {
-    font-family: $font-family-secondary;
-    font-size: 12px;
-    line-height: 16px;
-    color: $text-color-dark-secondary;
-  }
+.main-card__text {
+  font-family: $font-family-secondary;
+  font-size: 12px;
+  line-height: 16px;
+  color: $text-color-dark-secondary;
+}
 
-  &__item {
-    font-family: $font-family-secondary;
-    font-size: 12px;
-    line-height: 16px;
-    color: $text-color-dark-secondary;
-  }
+.main-card__item {
+  font-family: $font-family-secondary;
+  font-size: 12px;
+  line-height: 16px;
+  color: $text-color-dark-secondary;
+}
 
-  &__button {
-    @include reset-link;
+.main-card__button {
+  @include reset-link;
 
-    font-size: 16px;
-    line-height: 20px;
-  }
+  font-size: 16px;
+  line-height: 20px;
 }
