--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -1,31 +1,29 @@
-.programs {
-  &__list {
-    @include reset-list;
-  }
+.programs__list {
+  @include reset-list;
+}
 
-  &__item {
-    background-color: $background-color-secondary;
-  }
+.programs__item {
+  background-color: $background-color-secondary;
+}
 
-  &__title {
-    font-size: 24px;
-    line-height: 37px;
-    text-transform: uppercase;
-  }
+.programs__title {
+  font-size: 24px;
+  line-height: 37px;
+  text-transform: uppercase;
+}
 
-  &__text {
-    font-family: $font-family-secondary;
-    font-size: 14px;
-    line-height: 18px;
-    color: $text-color-dark-secondary;
-  }
+.programs__text {
+  font-family: $font-family-secondary;
+  font-size: 14px;
+  line-height: 18px;
+  color: $text-color-dark-secondary;
+}
 
-  &__link {
-    @include reset-link;
+.programs__link {
+  @include reset-link;
 
-    font-size: 16px;
-    line-height: 16px;
-    text-transform: uppercase;
-    color: $text-color-dark-primary;
-  }
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: $text-color-dark-primary;
 }
