--- a/source/styles/blocks/sub-card.scss
+++ b/source/styles/blocks/sub-card.scss
@@ -1,27 +1,25 @@
-.sub-card {
-  &__title-link {
-    @include reset-link;
-  }
+.sub-card__title-link {
+  @include reset-link;
+}
 
-  &__title {
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: $text-color-dark-special-1;
-  }
+.sub-card__title {
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: $text-color-dark-special-1;
+}
 
-  &__item {
-    font-family: $font-family-secondary;
-    font-size: 14px;
-    line-height: 14px;
-    color: $text-color-dark-secondary;
-  }
+.sub-card__item {
+  font-family: $font-family-secondary;
+  font-size: 14px;
+  line-height: 14px;
+  color: $text-color-dark-secondary;
+}
 
-  &__button {
-    @include reset-link;
+.sub-card__button {
+  @include reset-link;
 
-    font-size: 16px;
-    line-height: 20px;
-  }
+  font-size: 16px;
+  line-height: 20px;
 }
