--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -1,7 +1,5 @@
-.sub-products {
-  &__title {
-    font-size: 24px;
-    line-height: 24px;
-    font-weight: 400;
-  }
+.sub-products__title {
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
 }
