--- a/source/styles/blocks/main-card.scss
+++ b/source/styles/blocks/main-card.scss
@@ -1,3 +1,9 @@
+.main-card {
+  @media (max-width: $max-width-mobile) {
+    @include container;
+  }
+}
+
 .main-card__title-link {
   @include reset-link;
 }
