--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -2,6 +2,47 @@
   @include reset-list;
 }
 
+.advantages__item {
+  position: relative;
+
+  padding-left: 80px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: block;
+    width: 60px;
+    height: 60px;
+
+    background-color: $background-color-accent;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  &--leaf::before {
+    background-image: url("../../icons/stack.svg#leaf");
+    background-size: 30px 32px;
+  }
+
+  &--chemistry::before {
+    background-image: url("../../icons/stack.svg#chemistry");
+    background-size: 26px 29px;
+  }
+
+  &--eat::before {
+    background-image: url("../../icons/stack.svg#eat");
+    background-size: 25px 30px;
+  }
+
+  &--scales::before {
+    background-image: url("../../icons/stack.svg#scales");
+    background-size: 26px 31px;
+  }
+}
+
 .advantages__title {
   font-size: 36px;
   line-height: 40px;
