--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,14 +1,39 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding-top: 13px;
+  padding-bottom: 13px;
+
+  position: relative;
 }
 
 .header__logo {
-  display: block;
+  &:hover {
+    @include transition;
+    opacity: 0.8;
+  }
 
-  &--only-mobile {
-    @media (min-width: $min-width-tablet) {
-      display: none;
-    }
+  &:focus {
+    @include transition;
+    opacity: 0.8;
+  }
+
+  &:active {
+    @include transition;
+    opacity: 0.6;
+  }
+}
+
+.header__logo-secondary {
+  @include reset-link;
+  @include mask("../../images/logos/logo-text.svg", $text-color-dark-special-1, $text-color-dark-special-3, $text-color-dark-special-3, $text-color-dark-special-4);
+
+  display: block;
+  width: 101px;
+  height: 18px;
+
+  @media (min-width: $min-width-tablet) {
+    display: none;
   }
 }
