Добавляет кастомные checkbox и radio. Добавляет состояния интерактивным элементам.

--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -23,6 +23,10 @@
   text-transform: uppercase;
   color: $text-color-dark-secondary;
   white-space: nowrap;
+
+  &:has(input:disabled) {
+    opacity: 0.3;
+  }
 }
 
 .form__input {
