--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -2,13 +2,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 13px;
-  padding-bottom: 13px;
+  padding-top: 12px;
+  padding-bottom: 15px;
 
   position: relative;
 }
 
 .header__logo {
+  display: block;
+  width: 33px;
+  height: 38px;
+
   &:hover {
     @include transition;
     opacity: 0.8;
@@ -25,6 +29,9 @@
   }
 
   &--secondary {
+    width: 101px;
+    height: 18px;
+
     @media (min-width: $min-width-tablet) {
       display: none;
     }
