Вносит правки по замечаниям

--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -9,6 +9,7 @@ $grey-17rgb: #111111;
 $grey-34rgb: #222222;
 $grey-62rgb: #3e3e3e;
 $grey-68rgb: #444444;
+$grey-71rgb: #474747;
 $grey-102rgb: #666666;
 $grey-107rgb: #6b6b6b;
 $grey-186rgb: #bababa;
@@ -27,6 +28,7 @@ $rose: #ff8282;
 
 /* Сolor entities */
 $background-color-primary: $white;
+$background-color-substrate: $grey-71rgb;
 $background-color-secondary: $grey-242rgb;
 $background-color-special: $grey-234rgb;
 $background-color-accent: $lime;
