--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -31,6 +31,7 @@
   &--secondary {
     width: 101px;
     height: 18px;
+    margin-right: 9px;
 
     @media (min-width: $min-width-tablet) {
       display: none;
