--- a/source/styles/blocks/wrapper.scss
+++ b/source/styles/blocks/wrapper.scss
@@ -3,8 +3,8 @@
     @media (max-width: $max-width-mobile) {
       background:
         linear-gradient(to bottom, rgba($background-color-accent, 0.85) 302px, $background-color-primary 108px),
-        image-set(url("../../images/backgrounds/intro-mobile@1x.jpg") 1x, url("../../images/backgrounds/intro-mobile@2x.jpg") 2x) no-repeat top center,
-        linear-gradient(to bottom, $background-color-accent 302px, $background-color-primary 108px);
+        image-set(url("../../images/backgrounds/intro-mobile@1x.jpg") 1x, url("../../images/backgrounds/intro-mobile@2x.jpg") 2x) top center no-repeat,
+        linear-gradient(to bottom, $background-color-substrate 302px, $background-color-primary 108px);
     }
   }
 
