--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -6,6 +6,17 @@
   padding-bottom: 15px;
 
   position: relative;
+
+  @media (min-width: $min-width-tablet) {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    column-gap: 33px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    padding-top: 55px;
+    padding-bottom: 29px;
+  }
 }
 
 .header__logo {
@@ -26,6 +37,16 @@
   &:active {
     @include transition;
     opacity: 0.6;
+  }
+
+  @media (min-width: $min-width-tablet) {
+    width: 174px;
+    height: 50px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    width: 202px;
+    height: 59px;
   }
 
   &--secondary {
