--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -5,6 +5,18 @@
   flex-direction: column;
   gap: 20px;
   padding: 10px 0;
+
+  @media (min-width: $min-width-tablet) {
+    padding: 0;
+    gap: 30px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    padding: 82px 0 35px;
+  }
 }
 
 .programs__item {
@@ -12,26 +24,67 @@
   background-color: $background-color-secondary;
   background-repeat: no-repeat;
 
+  @media (min-width: $min-width-tablet) {
+    padding: 77px 316px 53px 52px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    padding: 77px 52px 55px;
+  }
 
   &--slim {
     background-image: url("../../icons/stack.svg#cat-slim");
     background-size: 50px 53px;
     background-position: 20px 21px;
+
+    @media (min-width: $min-width-tablet) {
+      background-size: 200px 211px;
+      background-position: right 63px center;
+    }
+
+    @media (min-width: $min-width-desktop) {
+      background-size: 100px 106px;
+      background-position: 52px 41px;
+    }
   }
 
   &--strong {
     background-image: url("../../icons/stack.svg#cat-strong");
     background-size: 67px 50px;
     background-position: 13px 24px;
+
+    @media (min-width: $min-width-tablet) {
+      background-size: 268px 200px;
+      background-position: right 29px center;
+    }
+
+    @media (min-width: $min-width-desktop) {
+      background-size: 134px 100px;
+      background-position: 33px 47px;
+    }
   }
 }
 
 .programs__title {
   margin: 0 0 29px;
   padding-left: 70px;
+
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
+
+  @media (min-width: $min-width-tablet) {
+    padding: 0;
+    margin: 0 0 24px;
+
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    margin: 0 0 73px;
+    padding-left: 162px;
+  }
 }
 
 .programs__text {
@@ -44,6 +97,21 @@
   color: $text-color-dark-secondary;
 
   border-bottom: solid 1px $border-color-dark-secondary;
+
+  @media (min-width: $min-width-tablet) {
+    margin: 0 0 48px;
+    padding-bottom: 0;
+
+    font-size: 16px;
+    line-height: 24px;
+    color: $text-color-dark-primary;
+
+    border-bottom: none;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    margin: 0 0 23px;
+  }
 }
 
 .programs__link {
@@ -57,6 +125,11 @@
   line-height: 16px;
   text-transform: uppercase;
   color: $text-color-dark-primary;
+
+  @media (min-width: $min-width-tablet) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 
   &::after {
     content: "";
