--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -1,6 +1,17 @@
 .advantages {
   padding-top: 10px;
   padding-bottom: 49px;
+
+  @media (min-width: $min-width-tablet) {
+    padding-top: 45px;
+    padding-bottom: 47px;
+
+    border-bottom: solid 1px $border-color-dark-special-1;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    border: none;
+  }
 }
 
 .advantages__list {
@@ -9,12 +20,40 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  @media (min-width: $min-width-tablet) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 37px 60px;
+
+    counter-reset: item 0;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 40px 80px;
+  }
 }
 
 .advantages__item {
   display: flex;
-  column-gap: 20px;
+  gap: 20px;
   align-items: center;
+
+  @media (min-width: $min-width-tablet) {
+    position: relative;
+
+    flex-direction: column;
+    gap: 31px;
+    align-items: start;
+    padding: 40px 75px 40px 0;
+
+    counter-increment: item;
+
+    @media (min-width: $min-width-desktop) {
+      padding: 40px 25px 40px 0;
+    }
+  }
 
   &::before {
     content: "";
@@ -26,6 +65,27 @@
     background-color: $background-color-accent;
     background-position: center;
     background-repeat: no-repeat;
+
+    @media (min-width: $min-width-tablet) {
+      min-width: 80px;
+      height: 80px;
+    }
+  }
+
+  &::after {
+    @media (min-width: $min-width-tablet) {
+      content: counter(item);
+
+      position: absolute;
+      top: 0;
+      left: 113px;
+      z-index: -1;
+
+      font-family: $font-family-primary;
+      font-size: 280px;
+      line-height: 280px;
+      color: $background-color-secondary;
+    }
   }
 
   &--leaf::before {
@@ -53,6 +113,12 @@
   margin: 0 0 40px;
   font-size: 36px;
   line-height: 40px;
+
+  @media (min-width: $min-width-tablet) {
+    margin: 0 0 32px;
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .advantages__text {
@@ -62,4 +128,9 @@
   font-size: 14px;
   line-height: 18px;
   color: $text-color-dark-secondary;
+
+  @media (min-width: $min-width-tablet) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
