--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -1,9 +1,5 @@
 .compare-slider {
   position: relative;
-
-  width: 280px;
-  height: 256px;
-  margin: 0 auto;
 }
 
 .compare-slider__img {
@@ -36,7 +32,6 @@
   &::-webkit-slider-thumb {
     appearance: none;
 
-
     margin: 0;
     width: 40px;
     height: 256px;
@@ -51,16 +46,30 @@
 
     cursor: pointer;
 
+    @media (min-width: $min-width-tablet) {
+      height: 512px;
+
+      background-image: url("../../icons/stack.svg#compare-slider-tablet");
+    }
+
     &:hover {
       @include transition;
 
       background-image: url("../../icons/stack.svg#compare-slider-hover");
+
+      @media (min-width: $min-width-tablet) {
+        background-image: url("../../icons/stack.svg#compare-slider-tablet-hover");
+      }
     }
 
     &:active {
       @include transition;
 
       background-image: url("../../icons/stack.svg#compare-slider-active");
+
+      @media (min-width: $min-width-tablet) {
+        background-image: url("../../icons/stack.svg#compare-slider-tablet-active");
+      }
     }
   }
 }
