Добавляет сетки для footer.

--- a/source/styles/blocks/bottom.scss
+++ b/source/styles/blocks/bottom.scss
@@ -1,4 +1,24 @@
+.bottom {
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  @media (min-width: $min-width-tablet) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 55px;
+    padding-bottom: 55px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    padding-top: 66px;
+    padding-bottom: 66px;
+  }
+}
+
 .bottom__logo {
+  cursor: pointer;
+
   &:hover {
     @include transition;
     opacity: 0.8;
@@ -12,5 +32,14 @@
   &:active {
     @include transition;
     opacity: 0.6;
+  }
+}
+
+.bottom__img {
+  display: block;
+  margin: 0 auto 20px;
+
+  @media (min-width: $min-width-tablet) {
+    margin: 0;
   }
 }
