--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,13 +1,76 @@
+.contacts__info {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 26px;
+  padding-bottom: 26px;
+
+  @media (min-width: $min-width-tablet) {
+    padding: 60px 70px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    position: absolute;
+    top: 95px;
+    left: 110px;
+
+    max-width: 565px;
+    min-width: 565px;
+
+    background-color: $background-color-primary;
+  }
+}
+
 .contacts__title {
+  width: 50%;
+  min-height: 60px;
+  max-width: 150px;
+  margin: 0;
+
   font-size: 16px;
   line-height: 20px;
   color: $text-color-dark-special-1;
+
+  @media (min-width: $min-width-tablet) {
+    min-height: 80px;
+    max-width: 165px;
+
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    width: auto;
+  }
 }
 
 .contacts__address {
+  width: 50%;
+  min-height: 60px;
+  max-width: 150px;
+
   font-family: $font-family-secondary;
   font-style: normal;
   font-size: 14px;
   line-height: 20px;
   color: $text-color-dark-secondary;
+
+  @media (min-width: $min-width-tablet) {
+    min-height: 80px;
+    max-width: 165px;
+
+    font-size: 16px;
+    text-align: end;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    width: auto;
+    text-align: start;
+  }
+}
+
+.contacts__img {
+  display: block;
+  width: 100%;
+  height: 362px;
+  object-fit: cover;
 }
