--- a/source/styles/blocks/socials.scss
+++ b/source/styles/blocks/socials.scss
@@ -1,5 +1,21 @@
 .socials {
   @include reset-list;
+
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin: 0 0 20px;
+  padding: 20px 0;
+
+
+  border-top: solid 1px $border-color-dark-secondary;
+  border-bottom: solid 1px $border-color-dark-secondary;
+
+  @media (min-width: $min-width-tablet) {
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
 }
 
 .socials__link {
