Вносит правки по замечаниям module6-task1 по index.html

--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -30,7 +30,7 @@
   }
 
   @media (min-width: $min-width-desktop) {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     gap: 40px 80px;
   }
 }
@@ -113,6 +113,7 @@
   margin: 0 0 40px;
   font-size: 36px;
   line-height: 40px;
+  font-weight: 400;
 
   @media (min-width: $min-width-tablet) {
     margin: 0 0 32px;
