--- a/source/styles/blocks/intro.scss
+++ b/source/styles/blocks/intro.scss
@@ -15,7 +15,7 @@
 
   @media (min-width: $min-width-desktop) {
     min-height: 551px;
-    padding: 110px 50% 110px 190px;
+    padding: 110px 720px 110px 190px;
   }
 }
 
