--- a/source/styles/blocks/copyright.scss
+++ b/source/styles/blocks/copyright.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
 
+  font-family: $font-family-secondary;
   font-size: 16px;
   line-height: 20px;
   color: $text-color-dark-secondary;
