--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -71,6 +71,7 @@
 
   font-size: 24px;
   line-height: 37px;
+  font-weight: 400;
   text-transform: uppercase;
 
   @media (min-width: $min-width-tablet) {
