--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -12,6 +12,7 @@
     position: absolute;
     top: 95px;
     left: 110px;
+    z-index: 1;
 
     width: 565px;
     padding: 60px 80px;
@@ -79,4 +80,24 @@
   width: 100%;
   height: 362px;
   object-fit: cover;
+}
+
+.contacts__map {
+  position: relative;
+  width: 100%;
+  height: 362px;
+
+  @media (min-width: $min-width-desktop) {
+    transform: translateX(0);
+  }
+}
+
+.contacts__marker {
+  position: relative;
+  transform: translate(-50%, -100%);
+
+  width: 57px;
+  height: 53px;
+
+  background-image: url("../../images/map/pin.png");
 }
