--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -87,8 +87,14 @@
   width: 100%;
   height: 362px;
 
+  background: center / cover no-repeat image-set(url("../../images/map/map-mobile@1x.png") 1x, url("../../images/map/map-mobile@2x.png") 2x);
+
+  @media (min-width: $min-width-tablet) {
+    background: center / cover no-repeat image-set(url("../../images/map/map-tablet@1x.png") 1x, url("../../images/map/map-tablet@2x.png") 2x);
+  }
+
   @media (min-width: $min-width-desktop) {
-    transform: translateX(0);
+    background: center / cover no-repeat image-set(url("../../images/map/map-desktop@1x.png") 1x, url("../../images/map/map-desktop@2x.png") 2x);
   }
 }
 
@@ -99,5 +105,12 @@
   width: 57px;
   height: 53px;
 
-  background-image: url("../../images/map/pin.png");
+  background-image: image-set(url("../../images/map/pin-mobile@1x.png") 1x, url("../../images/map/pin-mobile@2x.png") 2x);
+
+  @media (min-width: $min-width-tablet) {
+    width: 114px;
+    height: 106px;
+
+    background-image: image-set(url("../../images/map/pin-tablet@1x.png") 1x, url("../../images/map/pin-tablet@2x.png") 2x);
+  }
 }
