--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -30,6 +30,7 @@
   font-size: 16px;
   line-height: 20px;
   color: $text-color-dark-special-1;
+  text-transform: uppercase;
 
   @media (min-width: $min-width-tablet) {
     min-height: 80px;
