--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -86,7 +86,7 @@
   position: relative;
 
   display: flex;
-  padding: 14px 14px 18px;
+  padding: 14px 14px 16px;
 
   border: solid 1px $border-color-dark-primary;
   border-radius: 3px;
@@ -127,7 +127,7 @@
   position: absolute;
   left: 50%;
   bottom: 0;
-  transform: translateX(-50%) translateY(50%);
+  transform: translateX(-50%) translateY(66%);
 
   max-width: 95%;
   padding: 0 15px;
@@ -177,6 +177,7 @@
 
   font-size: 24px;
   line-height: 24px;
+  text-transform: uppercase;
 
   @media (min-width: $min-width-tablet) {
     font-size: 30px;
