--- a/source/styles/blocks/intro.scss
+++ b/source/styles/blocks/intro.scss
@@ -1,5 +1,6 @@
 .intro {
-  padding: 27px 0 10px;
+  padding-top: 27px;
+  padding-bottom: 10px;
 
   text-align: center;
   color: $text-color-light-primary;
