--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -1,3 +1,15 @@
+.contacts__info-container {
+  @media (min-width: $min-width-desktop) {
+    position: relative;
+
+    min-width: $min-width-desktop;
+    width: 100%;
+    max-width: $max-width-desktop;
+    margin: 0 auto;
+    padding: 0 $padding-x-desktop;
+  }
+}
+
 .contacts__info {
   display: flex;
   justify-content: space-between;
