--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -33,10 +33,22 @@
   cursor: pointer;
 }
 
-@mixin container($min-width: $min-width-mobile, $padding-x: $padding-x-mobile) {
-  min-width: $min-width;
+@mixin container {
+  min-width: $min-width-mobile;
+  width: 100%;
   margin: 0 auto;
-  padding: 0 $padding-x;
+  padding: 0 $padding-x-mobile;
+
+  @media (min-width: $min-width-tablet) {
+    min-width: $min-width-tablet;
+    padding: 0 $padding-x-tablet;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    min-width: $min-width-desktop;
+    max-width: $max-width-desktop;
+    padding: 0 $padding-x-desktop;
+  }
 }
 
 @mixin transition {
