--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -11,7 +11,7 @@
   @media (min-width: $min-width-tablet) {
     padding-top: 25px;
     padding-bottom: 25px;
-    column-gap: 33px;
+    gap: 30px;
   }
 
   @media (min-width: $min-width-desktop) {
