--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -13,6 +13,7 @@
   }
 
   @media (min-width: $min-width-tablet) {
+    align-self: end;
     font-size: 18px;
     line-height: 24px;
   }
@@ -60,13 +61,12 @@
   @media (min-width: $min-width-tablet) {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px 33px;
+    gap: 16px 34px;
+    padding-right: 4px;
   }
 
   @media (min-width: $min-width-desktop) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px 33px;
+    gap: 16px 32px;
   }
 }
 
@@ -74,6 +74,10 @@
   @media (max-width: $max-width-mobile) {
     border-top: solid 2px $border-color-dark-special-1;
     background-color: $background-color-primary;
+
+    &:last-of-type {
+      border-bottom: solid 2px $border-color-dark-special-1;
+    }
   }
 }
 
@@ -81,10 +85,12 @@
   @include reset-link;
 
   display: inline-block;
-  padding-bottom: 10px;
+  margin-bottom: 2px;
+  padding-bottom: 8px;
 
   color: inherit;
 
+  border-bottom: solid 2px transparent;
   cursor: pointer;
 
   &:not(.main-nav__link--current):hover {
@@ -106,23 +112,31 @@
   }
 
   &--current {
-    border-bottom: solid 4px $border-color-accent;
+    border-bottom: solid 2px $border-color-accent;
     cursor: default;
   }
 
   @media (max-width: $max-width-mobile) {
     display: block;
+    margin-bottom: 0;
     padding-top: 22px;
     padding-bottom: 22px;
+
+    border: 0;
 
     &--current {
       border-bottom: none;
     }
   }
+
+  @media (min-width: $min-width-desktop) {
+    margin-bottom: 5px;
+    padding-bottom: 11px;
+  }
 }
 
 .main-nav--index .main-nav__link--current {
   @media (min-width: $min-width-desktop) {
-    border-bottom: solid 4px $border-color-light-primary;
+    border-bottom: solid 2px $border-color-light-primary;
   }
 }
