--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -25,11 +25,11 @@
   background-repeat: no-repeat;
 
   @media (min-width: $min-width-tablet) {
-    padding: 77px 316px 53px 52px;
+    padding: 77px 316px 61px 52px;
   }
 
   @media (min-width: $min-width-desktop) {
-    padding: 77px 52px 55px;
+    padding: 77px 52px 64px;
   }
 
   &--slim {
@@ -100,7 +100,7 @@
   border-bottom: solid 1px $border-color-dark-secondary;
 
   @media (min-width: $min-width-tablet) {
-    margin: 0 0 48px;
+    margin: 0 0 58px;
     padding-bottom: 0;
 
     font-size: 16px;
@@ -111,7 +111,7 @@
   }
 
   @media (min-width: $min-width-desktop) {
-    margin: 0 0 23px;
+    margin: 0 0 32px;
   }
 }
 
@@ -128,6 +128,8 @@
   color: $text-color-dark-primary;
 
   @media (min-width: $min-width-tablet) {
+    column-gap: 25px;
+
     font-size: 20px;
     line-height: 20px;
   }
