--- a/source/styles/blocks/socials.scss
+++ b/source/styles/blocks/socials.scss
@@ -11,7 +11,7 @@
   border-bottom: solid 1px $border-color-dark-secondary;
 
   @media (min-width: $min-width-tablet) {
-    margin: 0;
+    margin: 0 0 0 40px;
     padding: 0;
     border: none;
   }
