Правит conatiner, добавляет сетки для page__title.

--- a/source/styles/blocks/main-card.scss
+++ b/source/styles/blocks/main-card.scss
@@ -1,6 +1,12 @@
 .main-card {
   @media (max-width: $max-width-mobile) {
     @include container;
+
+    border-top: solid 1px $border-color-dark-special-3;
+
+    &--special {
+      border-bottom: solid 1px $border-color-dark-special-3;
+    }
   }
 }
 
