--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -79,7 +79,7 @@
     background-color: $background-color-primary;
 
     &:last-of-type {
-      border-top: solid 2px $border-color-dark-special-1;
+      border-bottom: solid 2px $border-color-dark-special-1;
     }
   }
 }
