Добавляет сетки во все версии catalog.html до main-products включительно.

--- a/source/styles/blocks/main-cards.scss
+++ b/source/styles/blocks/main-cards.scss
@@ -1,3 +1,15 @@
 .main-cards {
   @include reset-list;
+
+  @media (min-width: $min-width-tablet) {
+    @include container;
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    gap: 63px 80px;
+  }
 }
