--- a/source/styles/blocks/main-cards.scss
+++ b/source/styles/blocks/main-cards.scss
@@ -1,15 +1,19 @@
 .main-cards {
   @include reset-list;
 
+  padding-bottom: 22px;
+
   @media (min-width: $min-width-tablet) {
     @include container;
 
     display: flex;
     flex-wrap: wrap;
     gap: 60px;
+    padding-bottom: 69px;
   }
 
   @media (min-width: $min-width-desktop) {
     gap: 63px 80px;
+    padding-bottom: 70px;
   }
 }
