--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,21 +1,67 @@
+.subscribe {
+  @include accent-section;
+
+  @media (min-width: $min-width-tablet) {
+    padding-bottom: 40px;
+  }
+}
+
 .subscribe__title {
-  font-size: 24px;
-  line-height: 24px;
-  font-weight: 400;
+  @include accent-section-title;
+
+  margin-bottom: 32px;
+  max-width: 110%;
+
+  @media (min-width: $min-width-tablet) {
+    margin-bottom: 66px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    margin-bottom: 73px;
+  }
 }
 
 .subscribe__text {
+  margin: 0;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
+
+  @media (min-width: $min-width-tablet) {
+    padding: 0 38px;
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+.subscribe__form {
+  padding: 24px 0 40px;
+
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+
+  @media (min-width: $min-width-tablet) {
+    display: grid;
+    grid-template-columns: 1fr 256px;
+    padding: 24px 38px 40px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    padding: 24px 234px 62px;
+  }
 }
 
 .subscribe__input {
+  padding: 13px;
+
   font-family: $font-family-primary;
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
   color: $text-color-dark-secondary;
+
+  border: solid 1px $border-color-dark-primary;
 
   &::placeholder {
     color: $text-color-dark-secondary;
