Добавляет сетки для form.html

--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -12,6 +12,10 @@
 
   border-top: solid 1px $border-color-dark-secondary;
 
+  &--form {
+    padding-bottom: 38px;
+  }
+
   @media (min-width: $min-width-tablet) {
     padding-top: 40px;
     padding-bottom: 84px;
@@ -20,6 +24,10 @@
     line-height: 60px;
 
     border-top: none;
+
+    &--form {
+      padding-bottom: 55px;
+    }
   }
 
   @media (min-width: $min-width-desktop) {
