--- a/source/styles/blocks/checkbox.scss
+++ b/source/styles/blocks/checkbox.scss
@@ -9,6 +9,11 @@
   background-color: $background-color-primary;
   cursor: pointer;
 
+  @media (min-width: $min-width-tablet) {
+    width: 40px;
+    height: 40px;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -26,6 +31,11 @@
     background-image: url("../../icons/stack.svg#checkbox-flag");
     background-position: center center;
     background-repeat: no-repeat;
+
+    @media (min-width: $min-width-tablet) {
+      width: 24px;
+      height: 19px;
+    }
   }
 
   &:hover {
