--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -1,22 +1,200 @@
+.form {
+  padding-bottom: 33px;
+
+  @media (min-width: $min-width-tablet) {
+    padding-bottom: 60px;
+  }
+
+  @media (min-width: $min-width-desktop) {
+    padding-bottom: 80px;
+  }
+}
+
+.form__fieldsets-container {
+  @media (min-width: $min-width-tablet) {
+    @include container;
+
+    @media (max-width: $max-width-tablet) {
+      padding-left: $padding-x-tablet-form;
+      padding-right: $padding-x-tablet-form;
+    }
+  }
+
+  @media (min-width: $min-width-desktop) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 80px;
+    margin-bottom: 56px;
+  }
+}
+
 .form__fieldset {
   display: flex;
   flex-direction: column;
+  row-gap: 12px;
+  border: none;
+
+  @media (max-width: $max-width-mobile) {
+    @include container;
+  }
+
+  @media (min-width: $min-width-tablet) {
+    padding-top: 9px;
+    row-gap: 20px;
+  }
+
+  &--no-title {
+    border-bottom: solid 1px $border-color-dark-secondary;
+
+    @media (min-width: $min-width-tablet) {
+      border: none;
+    }
+  }
+
+  &--accent-title {
+    position: relative;
+    border-top: solid 2px $border-color-accent;
+  }
+
+  // Дальше модификаторы индивидуальных свойств каждого филдсета отдельно
+  &--customer-data {
+    padding-bottom: 21px;
+
+    @media (min-width: $min-width-tablet) {
+      margin-bottom: 50px;
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    @media (min-width: $min-width-desktop) {
+      margin: 0;
+    }
+  }
+
+  &--program {
+    margin-bottom: 15px;
+    padding-top: 22px;
+    padding-bottom: 20px;
+
+    @media (min-width: $min-width-tablet) {
+      row-gap: 13px;
+      margin-bottom: 71px;
+      padding-top: 23px;
+      padding-left: 24px;
+      padding-bottom: 25px;
+
+      border: solid 1px $border-color-dark-secondary;
+    }
+
+    @media (min-width: $min-width-desktop) {
+      margin: 9px 0 0;
+      padding-top: 25px;
+      padding-left: 27px;
+      padding-bottom: 25px;
+    }
+  }
+
+  &--contacts {
+    margin-bottom: 15px;
+    padding-top: 44px;
+
+    @media (min-width: $min-width-tablet) {
+      margin-bottom: 60px;
+      padding-top: 71px;
+    }
+
+    @media (min-width: $min-width-desktop) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      column-gap: 80px;
+      margin-bottom: 63px;
+    }
+  }
+
+  &--comment {
+    margin-bottom: 16px;
+    padding-top: 35px;
+
+    @media (min-width: $min-width-tablet) {
+      margin-bottom: 61px;
+      padding-top: 82px;
+    }
+
+    @media (min-width: $min-width-desktop) {
+      margin-bottom: 66px;
+      padding-top: 74px;
+    }
+  }
+
+  &--additionally {
+    padding-top: 32px;
+    padding-bottom: 34px;
+
+    @media (min-width: $min-width-tablet) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 32px 60px;
+      padding-top: 51px;
+      padding-bottom: 52px;
+    }
+
+    @media (min-width: $min-width-desktop) {
+      grid-template-columns: repeat(4, 1fr);
+      column-gap: 80px;
+      padding-bottom: 60px;
+    }
+  }
 }
 
 .form__text {
+  margin: 0 auto 32px;
   font-size: 14px;
   line-height: 18px;
+  text-transform: uppercase;
+
+  @media (min-width: $min-width-tablet) {
+    margin: 0 auto 56px;
+
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .form__legend {
+  position: relative;
+  top: -4px;
+
+  margin: 0 -20px;
+  padding: 0 20px;
+
   font-size: 24px;
   line-height: 26px;
+
+  //Многострочный <legend> не реагирует на fit-content, inline-block и прочее.
+  // Для pixel perfect зададим max-width для мобильной версии.
+  @media (max-width: $max-width-mobile) {
+    max-width: 80%;
+
+    &--contacts {
+      position: relative;
+      top: 9px;
+    }
+  }
+
+  @media (min-width: $min-width-tablet) {
+    margin: 0 -40px;
+    padding: 0 40px;
+
+    font-size: 36px;
+    line-height: 36px;
+  }
 }
 
 .form__label {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
   column-gap: 13px;
+  word-break: normal;
 
   font-size: 16px;
   line-height: 18px;
@@ -26,6 +204,19 @@
 
   &:has(input:disabled) {
     opacity: 0.3;
+  }
+
+  @media (min-width: $min-width-tablet) {
+    font-size: 20px;
+    line-height: 20px;
+
+    &--program {
+      column-gap: 20px;
+    }
+
+    &--additionally {
+      column-gap: 20px;
+    }
   }
 }
 
@@ -39,8 +230,39 @@
   text-transform: uppercase;
   color: $text-color-dark-secondary;
 
+  border: solid 1px $border-color-dark-special-2;
+  border-radius: 0;
+
   &::placeholder {
     color: $text-color-dark-secondary;
+  }
+
+  &:hover {
+    border: solid 1px $border-color-dark-primary;
+  }
+
+  &:focus-visible {
+    padding: 13px 11px 12px 14px;
+
+    border: solid 2px $border-color-dark-focus;
+    outline: none;
+
+    @media (min-width: $min-width-tablet) {
+      padding: 10px 9px 8px 18px;
+    }
+  }
+
+  &:invalid:not(:placeholder-shown) {
+    padding: 13px 11px 12px 14px;
+
+    border: solid 2px $border-color-error;
+  }
+
+  @media (min-width: $min-width-tablet) {
+    padding: 11px 10px 9px 19px;
+
+    font-size: 20px;
+    line-height: 20px;
   }
 }
 
@@ -48,7 +270,7 @@
   background-image: url("../../icons/stack.svg#email");
   background-repeat: no-repeat;
   background-size: 20px 20px;
-  background-position: center right 12px;
+  background-position: center right 11px;
 
   &:focus {
     background-image: url("../../icons/stack.svg#email-focus");
@@ -62,8 +284,8 @@
 .form__input[type="tel"] {
   background-image: url("../../icons/stack.svg#phone");
   background-repeat: no-repeat;
-  background-size: 20px 20px;
-  background-position: center right 12px;
+  background-size: 15px 15px;
+  background-position: center right 14px;
 
   &:focus {
     background-image: url("../../icons/stack.svg#phone-focus");
@@ -71,19 +293,78 @@
 }
 
 .form__comment {
+  padding: 14px 10px 14px 15px;
+  width: 100%;
+  min-height: 150px;
+
+  font-family: $font-family-primary;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
   color: $text-color-dark-secondary;
 
+  border: solid 1px $border-color-dark-special-2;
+  border-radius: 0;
+
+  @media (min-width: $min-width-tablet) {
+    padding: 11px 10px 11px 20px;
+
+    font-size: 20px;
+    line-height: 30px;
+  }
+
   &::placeholder {
     color: $text-color-dark-secondary;
+  }
+
+  &:hover {
+    border: solid 1px $border-color-dark-primary;
+  }
+
+  &:focus-visible {
+    padding: 13px 9px 13px 14px;
+
+    border: solid 2px $border-color-dark-focus;
+    outline: none;
+
+    @media (min-width: $min-width-tablet) {
+      padding: 10px 9px 10px 19px;
+    }
+  }
+}
+
+.form__button-container {
+  @media (min-width: $min-width-tablet) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 60px;
+    align-items: center;
+  }
+}
+
+.form__button {
+  width: 100%;
+
+  line-height: 20px;
+
+  @media (min-width: $min-width-tablet) {
+    padding: 14px;
+    font-size: 20px;
+    line-height: 26px;
   }
 }
 
 .form__note {
+  margin: 20px 0 0;
+
   font-family: $font-family-secondary;
   font-size: 14px;
   line-height: 16px;
   text-align: center;
+
+  @media (min-width: $min-width-tablet) {
+    margin: 0;
+    font-size: 16px;
+    text-align: start;
+  }
 }
