--- a/source/styles/blocks/checkbox.scss
+++ b/source/styles/blocks/checkbox.scss
@@ -2,6 +2,7 @@
   appearance: none;
   position: relative;
   margin: 0;
+  min-width: 30px;
   width: 30px;
   height: 30px;
 
@@ -10,6 +11,7 @@
   cursor: pointer;
 
   @media (min-width: $min-width-tablet) {
+    min-width: 40px;
     width: 40px;
     height: 40px;
   }
