--- a/source/styles/blocks/radio.scss
+++ b/source/styles/blocks/radio.scss
@@ -3,6 +3,7 @@
   position: relative;
 
   margin: 0;
+  min-width: 30px;
   width: 30px;
   height: 30px;
 
@@ -12,6 +13,7 @@
   cursor: pointer;
 
   @media (min-width: $min-width-tablet) {
+    min-width: 40px;
     width: 40px;
     height: 40px;
   }
