Добавляет правки по переполнению и доступности для блока example

--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -8,6 +8,12 @@
     color: $compare-slider-button-color-hover;
   }
 
+  &:has(.compare-slider__range:focus) {
+    @include transition;
+
+    color: $compare-slider-button-color-hover;
+  }
+
   &:has(.compare-slider__range:active) {
     @include transition;
 
