--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,16 +1,17 @@
 .subscribe {
-  @include accent-section;
-
   @media (min-width: $min-width-tablet) {
+    padding-bottom: 37px;
+  }
+
+  @media (min-width: $min-width-desktop) {
     padding-bottom: 40px;
   }
 }
 
 .subscribe__title {
-  @include accent-section-title;
+  @include accent-title;
 
-  margin-bottom: 32px;
-  max-width: 110%;
+  margin-bottom: 33px;
 
   @media (min-width: $min-width-tablet) {
     margin-bottom: 66px;
@@ -35,7 +36,7 @@
 }
 
 .subscribe__form {
-  padding: 20px 0 40px;
+  padding: 22px 0 40px;
 
   display: flex;
   flex-direction: column;
@@ -44,7 +45,7 @@
   @media (min-width: $min-width-tablet) {
     display: grid;
     grid-template-columns: 1fr 256px;
-    padding: 24px 38px 40px;
+    padding: 23px 38px 42px;
   }
 
   @media (min-width: $min-width-desktop) {
